--- a/web/package.json
+++ b/web/package.json
@@ -7,6 +7,8 @@
     "build": "next build",
     "check": "next lint && tsc --noEmit",
     "dev": "dotenv -e ../.env -- next dev --turbo",
+    "dev:warmup": "node scripts/dev-with-warmup.js",
+    "env:test": "node scripts/env-test.js",
     "scan": "next dev & npx react-scan@latest localhost:3000",
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
     "format:write": "prettier --write \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
@@ -52,6 +54,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "dotenv": "^16.4.5",
     "framer-motion": "^12.6.5",
     "hast": "^1.0.0",
     "highlight.js": "^11.11.1",
