--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ APP_ENV=development
 
 # docker build args
 NEXT_PUBLIC_API_URL="http://localhost:8000/api"
+DEER_FLOW_URL="http://localhost:3001/chat"
 
 AGENT_RECURSION_LIMIT=30
 
