--- a/web/package.json
+++ b/web/package.json
@@ -8,7 +8,10 @@
     "check": "next lint && tsc --noEmit",
     "dev": "dotenv -e ../.env -- next dev --turbo",
     "dev:warmup": "node scripts/dev-with-warmup.js",
-    "env:test": "node scripts/env-test.js",
+    "test:env-load": "node scripts/test-env-load.js",
+    "test:env-conversion": "node scripts/test-env-conversion.js",
+    "test:api": "node scripts/test-api-connection.js",
+    "test:json": "node scripts/test-json-parsing.js",
     "scan": "next dev & npx react-scan@latest localhost:3000",
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
     "format:write": "prettier --write \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
