--- a/.env.example
+++ b/.env.example
@@ -8,11 +8,18 @@ DEER_FLOW_URL="http://localhost:3001/chat"
 
 AGENT_RECURSION_LIMIT=30
 
-# Search Engine, Supported values: tavily (recommended), duckduckgo, brave_search, arxiv
+# Search Engine, Supported values: tavily (recommended), duckduckgo, brave_search, arxiv, grounding_bing
 SEARCH_API=tavily
 TAVILY_API_KEY=tvly-xxx
 # BRAVE_SEARCH_API_KEY=xxx # Required only if SEARCH_API is brave_search
 # JINA_API_KEY=jina_xxx # Optional, default is None
+
+# Grounding Bing Search 配置
+GROUNDING_BING_CLIENT_ID=your_azure_client_id
+GROUNDING_BING_CLIENT_SECRET=your_azure_client_secret
+GROUNDING_BING_TENANT_ID=your_azure_tenant_id
+GROUNDING_BING_CONNECTION_ID=your_bing_connection_id
+GROUNDING_BING_BASE_URL=http://172.16.128.4:11009/api/projects/searchProject
 
 # Optional, RAG provider
 # RAG_PROVIDER=vikingdb_knowledge_base
@@ -40,3 +47,10 @@ VOLCENGINE_TTS_ACCESS_TOKEN=xxx
 
 # [!NOTE]
 # For model settings and other configurations, please refer to `docs/configuration_guide.md`
+
+USER_AGENT="Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/122.0.0.0 Safari/537.36 Edg/135.0.3179.54"
+HTTPS_PROXY="http://DOMAIN%5Cuser:pwd@proxy.ccc.com:8080"
+USER_ID="usr0123"
+
+PYTHONHTTPSVERIFY=0
+ENABLE_CONNECTION_LOGGING=true
