--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ dependencies = [
     "langchain-openai>=0.3.8",
     "langgraph>=0.3.5", # 將逐步移除 (漸進式遷移)
     "pyautogen>=0.4.0", # Microsoft AutoGen 框架
-    "autogen-agentchat>=0.4.0", # AutoGen AgentChat 模組
+    "autogen-ext>=0.4.0", # AutoGen ext 模組
     "readabilipy>=0.3.0",
     "python-dotenv>=1.0.1",
     "socksio>=1.0.0",
